Added run configs